[FEAT] #120 : 단어, 멀티 카드 추출 및 저장 로직 구현